k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat2md
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat2md
  template:
    metadata:
      labels:
        app: chat2md
    spec:
      containers:
        - name: chat2md
          image: ghcr.io/dedkola/chat2md:20260327130403-439f65b # {"$imagepolicy": "flux-system:chat2md"}
          ports:
            - containerPort: 3000
